fixed issue with scrollbar on mobile

--- a/src/less/kc-scaffolding.less
+++ b/src/less/kc-scaffolding.less
@@ -16,9 +16,9 @@ body{
   	-moz-background-size: 100% auto;
   	-o-background-size: 100% auto;
   	background-size: 100% auto;
-  	@media (min-width: @screen-sm-max){
-        overflow-x: hidden; /* Prevent scroll on narrow devices */
-  	}
+  	//@media (max-width: @screen-sm-max){
+      overflow-x: hidden; /* Prevent scroll on narrow devices */
+  	//}
 }
 // Links
 a {
